[metadata]
name = haproxystats
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
maintainer = Pavlos Parissis
maintainer-email = pavlos.parissis@gmail.com
summary = A HAProxy statistics collection program
home-page: https://github.com/unixsurfer/haproxystats
license = Apache 2.0
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Topic :: Utilities
keywords =
    haproxy

[files]
packages =
    haproxystats

[entry_points]
console_scripts =
     haproxystats-pull = haproxystats.pull:main
     haproxystats-process = haproxystats.process:main
